FEAT: Create ApiError and RestExceptionHandler for error handling